Fixed some spacing

--- a/Laravel.css
+++ b/Laravel.css
@@ -476,7 +476,7 @@
 	position: absolute;
 	right: 0;
 	text-align: right;
-	top: 33px;
+	top: 43px;
 }
 
 #fluxindex .subscribelink {
